Test/cli/projectFile/projectFile.dfy.expect
input.dfy(6,8): Warning: Shadowed local-variable name: x

Dafny program verifier did not attempt verification

Dafny program verifier did not attempt verification
Warning: project file option does-not-exist is not a valid Dafny option.

Dafny program verifier did not attempt verification
Error: property 'warn-shadowing' is of type 'Int64' but should be of type 'Boolean'
input.dfy(6,8): Warning: Shadowed local-variable name: x
moreInput.dfy(6,8): Warning: Shadowed local-variable name: x

Dafny program verifier did not attempt verification
input.dfy(6,8): Warning: Shadowed local-variable name: x

Dafny program verifier did not attempt verification
excluded.dfy(3,7): Error: Duplicate member name: Foo
input.dfy(6,8): Warning: Shadowed local-variable name: x
excluded.dfy(6,8): Warning: Shadowed local-variable name: z
1 resolution/type errors detected in the_program
